--- a/technical2.html
+++ b/technical2.html
@@ -33,7 +33,7 @@
 		<p>I spent about 3 to 4 hours on this lab.</p>
 
 
-		<a href="./Lab2.html">Click here to go back to main page!</a>
+		<a href="./index.html">Click here to go back to main page!</a>
 		<br>
 		<a href="https://html5.validator.nu/?">Click here to go back to see validation report</a>
 		<!--<img src= "ValidationReport2.jpg" alt="valid"></img>-->
