--- a/technical2.html
+++ b/technical2.html
@@ -33,10 +33,9 @@
 		<p>I spent about 3 to 4 hours on this lab.</p>
 
 
-		<a href="./index.html">Click here to go back to main page!</a>
+		<a href="./index.html">Click here to go back to main page! VALIDATION REPORT BELOW</a>
 		<br>
-		<a href="https://html5.validator.nu/?">Click here to go back to see validation report</a>
-		<!--<img src= "ValidationReport2.jpg" alt="valid"></img>-->
+			img src= "ValidationReport_2.jpg" alt="valid"></img>
 
 	</body>
 </html>
