--- a/technical2.html
+++ b/technical2.html
@@ -35,7 +35,7 @@
 
 		<a href="./index.html">Click here to go back to main page! VALIDATION REPORT BELOW</a>
 		<br>
-			img src= "ValidationReport_2.jpg" alt="valid"></img>
+			<img src= "ValidationReport_2.jpg" alt="valid"></img>
 
 	</body>
 </html>
