--- a/technical2.html
+++ b/technical2.html
@@ -33,7 +33,7 @@
 		<p>I spent about 3 to 4 hours on this lab.</p>
 
 
-		<a href="./index.html">Click here to go back to main page! VALIDATION REPORT BELOW</a>
+		<a href="./index.html">Click here to go back to main page! VALIDATION REPORT BELOW Scroll to the right for full code and validation.</a>
 		<br>
 			<img src= "ValidationReport_2.jpg" alt="valid"></img>
 
